Icon colour fixed on dark mode

--- a/website/macos-big-sur-icons/src/components/app.css
+++ b/website/macos-big-sur-icons/src/components/app.css
@@ -68,6 +68,12 @@ a{
 .card-light{
     background: var(--coral-light-card);
 }
+.fill-dark{
+    fill: var(--coral-dark-card);
+}
+.fill-light{
+    fill: var(--coral-light-card);
+}
 .bg-dark{
     background: var(--coral-dark-bg);
 }
